# BI_Sender

./: .dockerignore  .env.example  .gitignore  BI_Notify.bat  Dockerfile  README.md  alembic.ini  build_exe.bat  docker-compose.yml  push_to_github.ps1  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/: deps.py
app/api/routes/: routing.py  status.py  webhooks.py
app/core/: auth.py  config.py  http.py  idempotency.py  logging.py
app/db/: session.py
app/models/: __init__.py  execution.py  routing.py
app/schemas/: executions.py  routing.py  webhooks.py
app/services/: graph.py  pipeline.py  powerbi.py
app/workers/: celery_app.py  tasks.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: Pipeline.tsx
frontend/src/pages/: Dashboard.tsx  Docs.tsx  ExecutionsPage.tsx  RuleForm.tsx  RulesPage.tsx
launcher/: run.py
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: seed_routing.py
tests/: conftest.py  test_config.py  test_graph.py  test_http.py  test_pipeline.py  test_powerbi.py
