[project]
name = "bi-notify"
version = "1.1.0"
description = "Motor assíncrono de orquestração e entrega de relatórios Power BI."
requires-python = ">=3.12"

[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # FastAPI usa Depends() em defaults

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
